[package]
name = "foo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.3"
prost-derive = "0.12.3"
prometheus = "0.13.4"
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }
axum = "0.7.7"


[build-dependencies]
tonic-build = "0.11.0"